--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-install: pip install pytest
+install:
+  - pip install python-coveralls
+  - pip install pytest
 script: py.test
+after_success:
+  - coveralls
