--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - pip install pytest
 script: py.test
 after_success:
-  - coveralls
+  - COVERALLS_REPO_TOKEN=$coverallstoken coveralls
