--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install pytest
   - pip install pytest-pep8
   - pip install pytest-cov
+  - pip install -r requirements.txt
 script: py.test --pep8 --cov ./
 after_success:
   - coveralls
