--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,7 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - pip install python-coveralls
-  - pip install pytest
-  - pip install pytest-pep8
-  - pip install pytest-cov
+  - pip install -r requirements_test.txt
   - pip install -r requirements.txt
 script: py.test --pep8 --cov ./
 after_success:
